Fix failing test case