@@ -176,6 +176,8 @@
                 <configuration>
                     <argLine>
                         --add-opens java.base/java.lang=orika.core
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-reads com.fasterxml.jackson.module.jaxb=ALL-UNNAMED
                         @{argLine}
                         ${argLine}
                     </argLine>
