@@ -141,6 +141,7 @@
                     <argLine>
                         --add-opens java.base/java.lang=orika.core
                         --add-opens bo.framework.spring.boot.mvc.demo/org.divy.bo.demos.spring.mvc.cards=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
                         @{argLine}
                         ${argLine}
                     </argLine>
